# pingblender-cpg-amplifier

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  requirements.txt
.github/workflows/: docker-image.yml
cert/: ca-bundle.crt  ca-cert.crt  certificate.crt  thumbprint.v3.ext
docs/: Graffiti AI Amplifier.pptx  Graffiti AI Amplifier.xlsx  env_example.txt
docs/API/: README.md
docs/postman/: Pingblender-IO.postman_collection.json
shell/: entrypoint.sh
shell/db/: init-data.sh
shell/motion/: install_motion.sh  motion.conf
signals/: .gitignore  entrypoint.sh  requirements.txt  synthetiq.py
signals/core/: config.py  control.py
signals/core/auth/: __init__.py  badge.py  config.py  control.py
signals/core/cron/: __init__.py
signals/core/ctrl/: cors.py
signals/core/evt/: ctrl.py  inst.py
signals/core/meter/: config.py  control.py
signals/core/model/: document.py  embed.py  file.py  request.py  search.py
signals/core/proc/: config.py  control.py
signals/core/route/: config.py  control.py  default.py
signals/core/svc/: cmd.py
signals/cpg/: .editorconfig  .eslintrc.cjs  .gitignore  .prettierrc.cjs  Dockerfile  README.md  env.sh  index.html  index.mfe.html  mfe-config.json  nginx.conf  package.json  pingblender.py  tsconfig.json  tsconfig.node.json  vite.config.mfe.child.ts  vite.config.mfe.parent.ts  vite.config.ts
signals/cpg/config/: vite.default.ts  vite.mfe.child.ts  vite.mfe.parent.ts
signals/cpg/src/: App.scss  App.tsx
signals/module/aws/: config.py
signals/module/azure/: account.py
signals/module/file/: __init__.py  config.py  control.py  helper.py
signals/module/lang/: config.py  control.py
signals/module/mcp/: pyproject.toml
signals/module/mcp/client/auth/: README.md  pyproject.toml
signals/module/mcp/client/auth/mfe/: __init__.py  main.py
signals/module/mcp/service/auth/: README.md  pyproject.toml
signals/module/mcp/service/auth/agent/: __main__.py  auth_server.py  legacy_as_server.py  provider.py  server.py  token_verifier.py
signals/module/pgvector/: config.py  connect.py  control.py
(+140 files in other folders)
